--- a/NR/NRApp/templates/index2.html
+++ b/NR/NRApp/templates/index2.html
@@ -21,7 +21,7 @@
                     <th>Feasibility Study Available</th>
                 </tr>
                 <tr>
-                    <td><input type="text" name="s/n" required class="form-control"></td>
+                    <td><input type="text" name="s/n" value="{{s/n}}" required class="form-control"></td>
                     <td><input type="text" name="business_project" required class="form-control"></td>
                     <td><input type="float" step="0.01" name="proposed_facility_amount" required class="form-control" value="proposed_facility_amount">
                     </td>
