added a unique id, but the 10 digits not displaying

--- a/NR/NRApp/templates/approval.html
+++ b/NR/NRApp/templates/approval.html
@@ -27,7 +27,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">Application ID</th>
-                                    <td>1234567890</td>
+                                    <td>{{prediction_id}}</td>
                                 </tr>
                             </tbody>
                         </table>
