--- a/NR/NRApp/templates/dashboard.html
+++ b/NR/NRApp/templates/dashboard.html
@@ -53,8 +53,12 @@
                             <h2>Predict</h2>
                         </div>
                         <div class="card-body">
-                            <!-- Prediction form or content goes here -->
                             <p>Welcome to the prediction page!</p>
+                            
+                            <a href="{{ url_for('prediction') }}">Click here to go to the prediction page</a>
+                                              
+                            <!-- Prediction form or content goes here -->
+                            
 
                         </div>
                     </div>
