--- a/NR/NRApp/templates/users.html
+++ b/NR/NRApp/templates/users.html
@@ -18,6 +18,7 @@
                     <th>Phone Number</th>
                     <th>Email</th>
                     <th>State</th>
+                    <th>AP ID</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,6 +29,7 @@
                     <td>{{ user.phone_number }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.state }}</td>
+                    <td>{{ user.prediction_id }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
