--- a/NR/NRApp/templates/base.html
+++ b/NR/NRApp/templates/base.html
@@ -26,7 +26,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <span class="navbar-text">
-                        Logged in as {{ user.email }}
+                        Logged in as {{ user.business_name }}
                     </span>
                 </li>
                 <li class="nav-item">
