--- a/NR/NRApp/templates/admin_dashboard..html
+++ b/NR/NRApp/templates/admin_dashboard..html
@@ -10,6 +10,10 @@
             <div class="sidebar-sticky pt-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
+                        <a class="nav-link active" href="#searchUser" data-toggle="tab">
+                            <span data-feather="home"></span>
+                            Search User
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#predict" data-toggle="tab">
@@ -26,9 +30,14 @@
                 <div class="tab-pane active" id="searchUser">
                     <div class="card">
                         <div class="card-header bg-success text-white text-center">
+                            <h2>Search User</h2>
                         </div>
                         <div class="card-body">
                             <form action="/search_user" method="post">
+                                <div class="form-group">
+                                    <label for="userId">Search by ID</label>
+                                    <input type="text" id="userId" name="userId" class="form-control" placeholder="Enter User ID">
+                                </div>
                                 <div class="form-group">
                                     <label for="userEmail">Search by Email</label>
                                     <input type="email" id="userEmail" name="userEmail" class="form-control" placeholder="Enter User Email">
