--- a/NR/NRApp/templates/approval.html
+++ b/NR/NRApp/templates/approval.html
@@ -6,24 +6,24 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header bg-success text-white text-center">
-                <h2>User Eligibility Approval</h2>
+                <h2>Obligor Eligibility Approval</h2>
             </div>
             <div class="card-body">
                 <div class="alert alert-success text-center" role="alert">
                     Congratulations! You are successfully eligible.
                 </div>
-                <h4 class="text-center">User Details</h4>
+                <h4 class="text-center">Business Details</h4>
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <th scope="row">Name</th>
-                                    <td>John Doe</td>
+                                    <th scope="row">Business Name</th>
+                                    <td>{{ user.business_name }}</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Email</th>
-                                    <td>john.doe@example.com</td>
+                                    <th scope="row">Business Email</th>
+                                    <td>{{ user.email }}</td> 
                                 </tr>
                                 <tr>
                                     <th scope="row">Application ID</th>
