--- a/NR/NRApp/templates/disapproval.html
+++ b/NR/NRApp/templates/disapproval.html
@@ -6,24 +6,24 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-header bg-danger text-white text-center">
-                <h2>User Eligibility Rejection</h2>
+                <h2>Obligor Eligibility Rejection</h2>
             </div>
             <div class="card-body">
                 <div class="alert alert-danger text-center" role="alert">
                     Unfortunately, you are not eligible at this time.
                 </div>
-                <h4 class="text-center">User Details</h4>
+                <h4 class="text-center">Obligor Details</h4>
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <th scope="row">Name</th>
-                                    <td>John Doe</td>
+                                    <th scope="row">Business Name</th>
+                                    <td>unavailable</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Email</th>
-                                    <td>john.doe@example.com</td>
+                                    <th scope="row">Business Email</th>
+                                    <td>unavailable</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -40,7 +40,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
+
     <script>
         function retryApplication() {
             // Redirect to the retry application form page
@@ -48,6 +48,7 @@
         }
     </script>
 </body>
+
 </html>
 
 
