left with API and some touches

--- a/NR/NRApp/templates/approval.html
+++ b/NR/NRApp/templates/approval.html
@@ -48,7 +48,7 @@
    <script>
        function proceed() {
            // Redirect to the dashboard page
-           window.location.href = '/';
+           window.location.href = '/dashboard';
        }
    </script>
 </body>
