--- a/NR/NRApp/templates/disapproval.html
+++ b/NR/NRApp/templates/disapproval.html
@@ -44,7 +44,7 @@
     <script>
         function retryApplication() {
             // Redirect to the retry application form page
-            window.location.href = '/';
+            window.location.href = '/dashboard';
         }
     </script>
 </body>
