--- a/NR/NRApp/templates/dashboard.html
+++ b/NR/NRApp/templates/dashboard.html
@@ -11,6 +11,14 @@
                     <li class="nav-item">
                     </li>
                     <li class="nav-item">
+                        {% if session['is_admin'] %}
+                        <a class="nav-link" href="{{ url_for('admin_dashboard') }}">
+                            <span data-feather="file"></span>
+                            Admin Dashboard
+                        </a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item">
                         <a class="nav-link" href="#predict" data-toggle="tab">
                             <span data-feather="file"></span>
                             Predict
