--- a/NR/NRApp/templates/search.html
+++ b/NR/NRApp/templates/search.html
@@ -64,7 +64,7 @@
                     <td>{{ user.state }}</td>
                     <td>
                         <a href="{{ url_for('edit_user', user_id=user.id) }}" class="btn btn-warning btn-sm">Edit</a>
-                        <a href="{{ url_for('edit_user', user_id=user.id) }}" class="btn btn-warning btn-sm">Del</a>
+                        <a href="{{ url_for('delete_user', user_id=user.id) }}" class="btn btn-danger btn-sm">Delete</a>
                     </td>
                 </tr>
             </tbody>
