still left with api

--- a/NR/NRApp/templates/login.html
+++ b/NR/NRApp/templates/login.html
@@ -43,7 +43,8 @@
                             {% endif %}
                         {% endwith %}
                         
-                        <form method="POST" action="{{ url_for('login') }}">
+                        <form method="POST" action="{{ url_for('login') }}"> 
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
                             <div class="form-group">
                                 <label for="email">Email</label>
                                 <input type="email" class="form-control" id="email" name="email" required>
