--- a/NR/NRApp/templates/register_admin.html
+++ b/NR/NRApp/templates/register_admin.html
@@ -24,8 +24,8 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header header-light-green d-flex align-items-center">
-                        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
+                    <div class="card-header header-light-green text-center">
+                       
                         <h2>Register Admin</h2>
                     </div>
                     <div class="card-body">
@@ -44,7 +44,8 @@
                                 </div>
                             {% endif %}
                         {% endwith %}
-                        <form method="POST" action="{{ url_for('register_admin') }}">
+                        <form method="POST" action="{{ url_for('register_admin') }}"> 
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
                             <div class="form-group">
                                 <label for="business_name">Name</label>
                                 <input type="text" class="form-control" id="admin_name" name="admin_name"
@@ -77,6 +78,7 @@
                                 <button type="submit" class="btn btn-primary">Register</button>
                             </div>
                         </form>
+                       
                         <div class="text-center mt-3">
                             <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
                         </div>
