--- a/NR/NRApp/templates/confirm.html
+++ b/NR/NRApp/templates/confirm.html
@@ -2,16 +2,23 @@
 {% block title %}Confirm Deletion{% endblock %}
 {% block content %}
 <div class="container mt-5">
-    <div class="card">
-        <div class="card-header bg-warning text-white text-center">
-            <h2>Confirm Deletion</h2>
-        </div>
-        <div class="card-body">
-            <p>Are you sure you want to delete the user: {{ user.email }}?</p>
-            <form method="POST">
-                <button type="submit" class="btn btn-danger">Delete</button>
-                <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Cancel</a>
-            </form>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header bg-warning text-white text-center">
+                    <h2>Confirm Deletion</h2>
+                </div>
+                <div class="card-body">
+                    <p class="text-center">Are you sure you want to delete the user: <strong>{{ user.email }}</strong>?</p>
+                    <form method="POST">
+                        {{ form.hidden_tag() }}
+                        <div class="d-flex justify-content-center">
+                            {{ form.submit(class="btn btn-danger mr-2") }}
+                            <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary ml-2">Cancel</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
