--- a/NR/NRApp/templates/dashboard.html
+++ b/NR/NRApp/templates/dashboard.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="card-body">
                             <form action="{{ url_for('search') }}" method="post">
-                                <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                                {{ form.hidden_tag() }}
                                 <div class="form-group">
                                     <label for="search_term">Search by ID or Email</label>
                                     <input type="text" id="search_term" name="search_term" class="form-control" placeholder="Enter User ID or Email" required>
