--- a/NR/NRApp/templates/prediction.html
+++ b/NR/NRApp/templates/prediction.html
@@ -8,7 +8,7 @@
         </div>
         <div class="card-body">
             <form action="{{ url_for('predict') }}" method="post">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                {{ form.hidden_tag() }}
                 <table class="table table-striped">
                     <thead>
                         <tr>
