--- a/NR/NRApp/templates/register_admin.html
+++ b/NR/NRApp/templates/register_admin.html
@@ -75,7 +75,7 @@
                                     name="confirm_password" placeholder="Confirm Password" required>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Register</button>
+                                <button type="submit" class="btn btn-custom-green">Register</button>
                             </div>
                         </form>
                        
